tests/compile_fail/004_copy_destination_not_buffer.vox
a buffer called "src" is 8 bytes in size.
a number called "n" is 0.
copy src to n.
